# mini-karaoke

./: .gitignore  LICENSE  README.md
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  rnnoise_jni.cpp
android/app/src/main/java/com/karaoke/app/audio/: NativeRnnoise.kt  PitchDetector.kt  RNNoise.kt  SpectralDenoiser.kt  VoiceClassifier.kt  WavUtils.kt
android/app/src/main/java/com/karaoke/app/network/: ApiService.kt
android/app/src/main/java/com/karaoke/app/replay/: SavedReplayStore.kt
android/app/src/main/java/com/karaoke/app/ui/: ResultActivity.kt  SavedReplaysActivity.kt  SingActivity.kt  SongDetailActivity.kt  SongListActivity.kt
android/app/src/main/res/layout/: activity_result.xml  activity_saved_replays.xml  activity_sing.xml  activity_song_detail.xml  activity_song_list.xml  item_saved_replay.xml  item_song.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: network_security_config.xml
backend/: README.md  requirements.txt
backend/app/: db.py  main.py  models.py  separation.py  storage.py
backend/app/templates/: index.html  song_detail.html
report/: AI_USAGE.md  RNNOISE_SETUP.md
